fix overflow accidentally causing scrollbars

--- a/standard/packages/core/src/styles/calendar-root.css
+++ b/standard/packages/core/src/styles/calendar-root.css
@@ -66,7 +66,11 @@
   flex-grow: 1;
 }
 
-.fcnew-basis0 { // only important if there are siblings that are expanding too
+/*
+Only important if there are siblings that are expanding too.
+Rarely used. Just inline this?
+*/
+.fcnew-basis0 {
   flex-basis: 0;
 }
 
